--- a/app.css
+++ b/app.css
@@ -39,11 +39,9 @@
     display: inline-block;
     vertical-align: top;
     text-align: center;
-    max-width: 600px;
+    /*max-width: 600px;*/
 
     padding: 5px;
-
-    font-size: large;
 }
 
 .introQR {
